--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "axios": "^0.27.2",
+    "class-validator": "^0.13.2",
     "nestjs-i18n": "^9.1.8",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
